--- a/assets/styles/style-chung.css
+++ b/assets/styles/style-chung.css
@@ -16,12 +16,11 @@
 html {
     scroll-behavior: smooth;
 }
-
+a {
+    text-decoration: none;
+    color: black;
+}
 /*HEADER*/
-    a {
-        text-decoration: none;
-        color: black;
-    }
     .header {
         width: 100%;
         height: fit-content;
@@ -61,7 +60,8 @@ html {
     }
 /*FOOTER*/
 
-.pointer label, input{
+.pointer label, 
+.pointer input{
     cursor: pointer;
     /* padding: 4px !important; */
 }
