--- a/assets/styles/style-chung.css
+++ b/assets/styles/style-chung.css
@@ -16,6 +16,10 @@
 html {
     scroll-behavior: smooth;
 }
+body {
+    background-color: white;
+    overflow-x: hidden;
+}
 a {
     text-decoration: none;
     color: black;
