--- a/assets/styles/style-home-page.css
+++ b/assets/styles/style-home-page.css
@@ -175,6 +175,7 @@ body {
   }
   
   .product-grid .product-item {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -183,6 +184,22 @@ body {
     border-radius: 10px;
     box-shadow: 1px 2px 4px #333333;
     user-select: none;
+  }
+  .product-grid .product-item .discount-label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 5px;
+    left: -6px;
+    width: 60px;
+    height: auto;
+    background-color: red;
+    color: white;
+    border-radius: 10px 5px 5px 5px;
+    padding: 6px 5px;
+    font-size: 18px;
+    font-weight: bold;
   }
   .product-grid .product-item a {
     text-decoration: none;
